fix for inputs on ios

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,4 +1,4 @@
-* {
+.client * {
     -webkit-user-select: none;
     user-select: none;
 }
